# pyqml

./: .gitignore  README.md  com.github.natorsc.Pyqml.json  pyproject.toml
.github/: FUNDING.yml
resources/: resources.qrc  tools.py
resources/icons/: com.github.natorsc.Pyqml.icns
resources/locales/: com.github.natorsc.Pyqml.pt_BR.ts
resources/ui/: MainWindow.qml
src/app_name/: __main__.py  app.py  resources_rc.py
src/app_name/data/: com.github.natorsc.Pyqml.desktop
src/app_name/settings/: conf.py
src/app_name/ui/: MainWindow.py  MenuBar.py
