[project]
name = "app-name"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Renato Cruz", email = "natorsc@gmail.com"},
]
dependencies = ["PySide6>=6.9.0"]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "taskipy>=1.14.1",
]

[project.gui-scripts]
app-name = "app_name:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 79
extend-exclude = [
    ".flatpak-builder",
    ".pdm-build",
    ".venv",
    "docs",
    "flatpak-build-dir",
    "resources_rc.py",
]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff check . --select I --fix && ruff format ."
setup = "python resources/tools.py"
tr = "pyside6-linguist"
